// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Name 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "expression": [
                        {
                          "children": {
                            "name": [
                              {
                                "children": {
                                  "name": [
                                    {
                                      "image": "user",
                                      "payload": "user",
                                      "startLine": 1,
                                      "startOffset": 0,
                                      "tokenType": {
                                        "CATEGORIES": [],
                                        "categoryMatches": [],
                                        "categoryMatchesMap": {},
                                        "isParent": false,
                                        "name": "name",
                                        "tokenTypeIdx": 9,
                                      },
                                      "tokenTypeIdx": 9,
                                    },
                                  ],
                                },
                                "name": "name",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                      "varEnd": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varEnd",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "varStart": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varStart",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Number 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "expression": [
                        {
                          "children": {
                            "number": [
                              {
                                "children": {
                                  "number": [
                                    {
                                      "image": "0",
                                      "payload": 0,
                                      "startLine": 1,
                                      "startOffset": 0,
                                      "tokenType": {
                                        "CATEGORIES": [],
                                        "categoryMatches": [],
                                        "categoryMatchesMap": {},
                                        "isParent": false,
                                        "name": "number",
                                        "tokenTypeIdx": 10,
                                      },
                                      "tokenTypeIdx": 10,
                                    },
                                  ],
                                },
                                "name": "number",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                      "varEnd": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varEnd",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "varStart": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varStart",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Number 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "expression": [
                        {
                          "children": {
                            "number": [
                              {
                                "children": {
                                  "number": [
                                    {
                                      "image": "42",
                                      "payload": 42,
                                      "startLine": 1,
                                      "startOffset": 0,
                                      "tokenType": {
                                        "CATEGORIES": [],
                                        "categoryMatches": [],
                                        "categoryMatchesMap": {},
                                        "isParent": false,
                                        "name": "number",
                                        "tokenTypeIdx": 10,
                                      },
                                      "tokenTypeIdx": 10,
                                    },
                                  ],
                                },
                                "name": "number",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                      "varEnd": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varEnd",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "varStart": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varStart",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Number 3`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "expression": [
                        {
                          "children": {
                            "number": [
                              {
                                "children": {
                                  "number": [
                                    {
                                      "image": "42.23",
                                      "payload": 42.23,
                                      "startLine": 1,
                                      "startOffset": 0,
                                      "tokenType": {
                                        "CATEGORIES": [],
                                        "categoryMatches": [],
                                        "categoryMatchesMap": {},
                                        "isParent": false,
                                        "name": "number",
                                        "tokenTypeIdx": 10,
                                      },
                                      "tokenTypeIdx": 10,
                                    },
                                  ],
                                },
                                "name": "number",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                      "varEnd": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varEnd",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "varStart": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varStart",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`String 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "expression": [
                        {
                          "children": {
                            "string": [
                              {
                                "children": {
                                  "string": [
                                    {
                                      "image": "Hello world",
                                      "payload": "Hello world",
                                      "startLine": 1,
                                      "startOffset": 0,
                                      "tokenType": {
                                        "CATEGORIES": [],
                                        "categoryMatches": [],
                                        "categoryMatchesMap": {},
                                        "isParent": false,
                                        "name": "string",
                                        "tokenTypeIdx": 11,
                                      },
                                      "tokenTypeIdx": 11,
                                    },
                                  ],
                                },
                                "name": "string",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                      "varEnd": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varEnd",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "varStart": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varStart",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`String 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "expression": [
                        {
                          "children": {
                            "string": [
                              {
                                "children": {
                                  "string": [
                                    {
                                      "image": "Hello world",
                                      "payload": "Hello world",
                                      "startLine": 1,
                                      "startOffset": 0,
                                      "tokenType": {
                                        "CATEGORIES": [],
                                        "categoryMatches": [],
                                        "categoryMatchesMap": {},
                                        "isParent": false,
                                        "name": "string",
                                        "tokenTypeIdx": 11,
                                      },
                                      "tokenTypeIdx": 11,
                                    },
                                  ],
                                },
                                "name": "string",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                      "varEnd": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varEnd",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "varStart": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varStart",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`String 3`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "expression": [
                        {
                          "children": {
                            "string": [
                              {
                                "children": {
                                  "string": [
                                    {
                                      "image": "It\\\\'s good",
                                      "payload": "It\\\\'s good",
                                      "startLine": 1,
                                      "startOffset": 0,
                                      "tokenType": {
                                        "CATEGORIES": [],
                                        "categoryMatches": [],
                                        "categoryMatchesMap": {},
                                        "isParent": false,
                                        "name": "string",
                                        "tokenTypeIdx": 11,
                                      },
                                      "tokenTypeIdx": 11,
                                    },
                                  ],
                                },
                                "name": "string",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                      "varEnd": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varEnd",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "varStart": [
                        {
                          "image": "",
                          "payload": "",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "varStart",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Template 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {},
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Template 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "text": [
                  {
                    "children": {
                      "text": [
                        {
                          "image": "Hello world",
                          "payload": "Hello world",
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "text",
                            "tokenTypeIdx": 4,
                          },
                          "tokenTypeIdx": 4,
                        },
                      ],
                    },
                    "name": "text",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;
